Fixed button alignment in chrome.

--- a/src/components/starmap/ScopeButtons.scss
+++ b/src/components/starmap/ScopeButtons.scss
@@ -46,14 +46,14 @@
         height: 40px;
         background-image: url(/images/arrow_up_blue.png), url(/starhop/images/arrow_up_blue.png);
         background-repeat: no-repeat;
-        margin: 5px;
+        margin: auto;
     }
     &__down {
         width: 40px;
         height: 40px;
         background-image: url(/images/arrow_down_blue.png), url(/starhop/images/arrow_down_blue.png);
         background-repeat: no-repeat;
-        margin: 5px;
+        margin: auto;
     }
 
 }
